# watashi

./: .ci  .dockerignore  .drone.yml  .editorconfig  .gitignore  .nginx.conf  .rubocop.yml  .static.yaml  .tool-versions  .woodpecker.yml  CNAME  Cargo.toml  Dockerfile  Dockerfile.dev  Gemfile  Jenkinsfile  LICENSE  Makefile  README.markdown  README.md  README.org  alexblackie.spec  articles.go  build.rs  build.sh  config.go  config.rb  config.ru  config.yaml  content.go  cv.html  deploy  document.go  document_test.go  fly.toml  ga.txt  gatsby-config.js  gatsby-node.js  go.mod  go.sum  (+25 more)
.woodpecker/: deploy.yaml
.worktree/: deploy.yaml
_assets/: site.css
_build/: CNAME  GPG_2015  feed.xml  index.html
articles/: automate-commit-coauthors-pairing.md  better-saas-through-productisation.html  canadian-culture.html  cloud-private-networks.html  continuous-delivery-aks-acr-azure-terraform.md  dell-7214.html  devops-in-the-closet.html  email-authenticity-dkim-spf-dmarc.html  facebook-privacy.html  fibe.html  fixing-php-mail-on-ubuntu.html  k20.shtml  linux-vm-windows-development.shtml  mavericks.html  neovim-fzy.md  nextcloud-on-k8s.md  nspawn.html  nspawn.shtml  persistent-custom-post-types.html  simple-backup-script-linux-servers.html  simple-config-uuids-ecto.md  static-site-bash.md  stop-selling-startups.md  trying-to-be-worse.html  ubuntu-on-windows-first-look.shtml  vpc.html  vpc.shtml  worry-about-governance.md  x205ta.html  x205ta.shtml  x250.html  x250.shtml  year-of-linux-on-the-windows.shtml  yosemite.shtml
assets/: site.css
asus-x205ta-review/: index.html
(+395 files in other folders)
