[package]
name = "watashi"
version = "9.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
askama = "0.11.1"
askama_derive = "0.11.2"
askama_escape = "0.10.3"
chrono = { version = "0.4.23", features = ["serde"] }
glob = "0.3.1"
pulldown-cmark = "0.9.2"
serde = "1.0.152"
serde_yaml = "0.9.17"
